// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyNotes /> container should match snapshot with bookmarks active 1`] = `
<div
  className="list-sections"
>
  <div
    className="searchbar"
  >
    <span
      className="input-wrapper"
    >
      <svg
        className="icon"
      >
        <use
          xlinkHref="/static/svglist.svg#search"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <input
        onChange={[Function]}
        placeholder="SEARCH BOOKMARKS"
        value=""
      />
    </span>
  </div>
  <section
    className="note-list"
  >
    <div
      className="highlight-item"
      id={5452296}
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/1"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              01.18.19
            </span>
             
            | 
            Matthew 1:2
          </h4>
          <p
            className="text"
          >
            ENGESV
          </p>
        </div>
      </a>
      <div
        className="delete-highlight"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id={5452373}
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/1"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              01.18.19
            </span>
             
            | 
            Matthew 1:2
          </h4>
          <p
            className="text"
          >
            ENGESV
          </p>
        </div>
      </a>
      <div
        className="delete-highlight"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id={5574788}
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/3"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.06.19
            </span>
             
            | 
            Matthew 3:3
          </h4>
          <p
            className="text"
          >
            ENGESV
          </p>
        </div>
      </a>
      <div
        className="delete-highlight"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id={5574789}
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MRK/16"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.08.19
            </span>
             
            | 
            Mark 16:3
          </h4>
          <p
            className="text"
          >
            ENGESV
          </p>
        </div>
      </a>
      <div
        className="delete-highlight"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id={5574790}
    >
      <a
        className="list-item"
        href="/bible/ENGNIV/MAT/11"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.12.19
            </span>
             
            | 
            Matthew 11:7
          </h4>
          <p
            className="text"
          >
            ENGNIV
          </p>
        </div>
      </a>
      <div
        className="delete-highlight"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
  </section>
  <div
    className="pagination"
  >
    <div
      className="item-list"
    >
      <div
        className="item active"
      >
        <span
          id="1-button"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          1
        </span>
      </div>
    </div>
    <div
      className="page-size-selector"
    >
      <div
        className="closed"
      >
        <div
          className="active"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            10 PER PAGE
          </span>
          <svg
            height="13px"
            width="7px"
          >
            <use
              xlinkHref="/static/svglist.svg#pagination-arrows"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            25 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            50 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            100 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            VIEW ALL
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
      </div>
      <div
        className="per-page-toggle"
        onClick={[MockFunction]}
        role="button"
        tabIndex={0}
      >
        10 PER PAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`<MyNotes /> container should match snapshot with default props 1`] = `
<div
  className="list-sections"
>
  <div
    className="searchbar"
  >
    <span
      className="input-wrapper"
    >
      <svg
        className="icon"
      >
        <use
          xlinkHref="/static/svglist.svg#search"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <input
        onChange={[Function]}
        placeholder="SEARCH NOTES"
        value=""
      />
    </span>
  </div>
  <section
    className="note-list"
  >
    <div
      className="highlight-item"
      id={403618}
    >
      <div
        className="list-item"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.06.19
            </span>
             
            | 
            New Note
          </h4>
          <p
            className="text"
          >
            Is here
          </p>
        </div>
      </div>
      <div
        className="edit-note"
        id="403618-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#edit_note"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
        id="403618-delete"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id={403619}
    >
      <div
        className="list-item"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.12.19
            </span>
             
            | 
            new note
          </h4>
          <p
            className="text"
          >
            newest note
          </p>
        </div>
      </div>
      <div
        className="edit-note"
        id="403619-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#edit_note"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
        id="403619-delete"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
  </section>
  <div
    className="pagination"
  >
    <div
      className="item-list"
    >
      <div
        className="item active"
      >
        <span
          id="1-button"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          1
        </span>
      </div>
    </div>
    <div
      className="page-size-selector"
    >
      <div
        className="closed"
      >
        <div
          className="active"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            10 PER PAGE
          </span>
          <svg
            height="13px"
            width="7px"
          >
            <use
              xlinkHref="/static/svglist.svg#pagination-arrows"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            25 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            50 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            100 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            VIEW ALL
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
      </div>
      <div
        className="per-page-toggle"
        onClick={[MockFunction]}
        role="button"
        tabIndex={0}
      >
        10 PER PAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`<MyNotes /> container should match snapshot with highlights active 1`] = `
<div
  className="list-sections"
>
  <div
    className="searchbar"
  >
    <span
      className="input-wrapper"
    >
      <svg
        className="icon"
      >
        <use
          xlinkHref="/static/svglist.svg#search"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <input
        onChange={[Function]}
        placeholder="SEARCH HIGHLIGHTS"
        value=""
      />
    </span>
  </div>
  <section
    className="note-list"
  >
    <div
      className="highlight-item"
      id="24440733_rgba(173,221,121,0.7)"
    >
      <a
        className="list-item"
        href="/bible/ENGNAB/EPH/4"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            EPH - 4:14 - (ENGNAB)
          </h4>
          <h4
            className="text"
          >
            ENGNAB
          </h4>
        </div>
      </a>
      <div
        className="edit-color"
        id="24440733_rgba(173,221,121,0.7)-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="color-icon"
          style={
            Object {
              "backgroundColor": "rgba(173,221,121,0.7)",
            }
          }
        />
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
      >
        <svg
          className="icon"
          id="24440733_rgba(173,221,121,0.7)-delete"
          onClick={[Function]}
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id="25827775_rgba(252,230,0,0.5)"
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/3"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            MAT - 3:3 - (ENGESV)
          </h4>
          <h4
            className="text"
          >
            ENGESV
          </h4>
        </div>
      </a>
      <div
        className="edit-color"
        id="25827775_rgba(252,230,0,0.5)-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="color-icon"
          style={
            Object {
              "backgroundColor": "rgba(252,230,0,0.5)",
            }
          }
        />
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
      >
        <svg
          className="icon"
          id="25827775_rgba(252,230,0,0.5)-delete"
          onClick={[Function]}
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id="25827776_rgba(84,185,72,0.5)"
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MRK/16"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            MRK - 16:5 - (ENGESV)
          </h4>
          <h4
            className="text"
          >
            ENGESV
          </h4>
        </div>
      </a>
      <div
        className="edit-color"
        id="25827776_rgba(84,185,72,0.5)-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="color-icon"
          style={
            Object {
              "backgroundColor": "rgba(84,185,72,0.5)",
            }
          }
        />
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
      >
        <svg
          className="icon"
          id="25827776_rgba(84,185,72,0.5)-delete"
          onClick={[Function]}
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id="25827777_rgba(84,185,72,0.5)"
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/1"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            MAT - 1:4 - (ENGESV)
          </h4>
          <h4
            className="text"
          >
            ENGESV
          </h4>
        </div>
      </a>
      <div
        className="edit-color"
        id="25827777_rgba(84,185,72,0.5)-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="color-icon"
          style={
            Object {
              "backgroundColor": "rgba(84,185,72,0.5)",
            }
          }
        />
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
      >
        <svg
          className="icon"
          id="25827777_rgba(84,185,72,0.5)-delete"
          onClick={[Function]}
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id="25827778_rgba(80,165,220,0.5)"
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/1"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            MAT - 1:17 - (ENGESV)
          </h4>
          <h4
            className="text"
          >
            ENGESV
          </h4>
        </div>
      </a>
      <div
        className="edit-color"
        id="25827778_rgba(80,165,220,0.5)-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="color-icon"
          style={
            Object {
              "backgroundColor": "rgba(80,165,220,0.5)",
            }
          }
        />
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
      >
        <svg
          className="icon"
          id="25827778_rgba(80,165,220,0.5)-delete"
          onClick={[Function]}
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id="25827779_rgba(252,230,0,0.5)"
    >
      <a
        className="list-item"
        href="/bible/ENGESV/MAT/1"
        onClick={[Function]}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            MAT - 1:6 - (ENGESV)
          </h4>
          <h4
            className="text"
          >
            ENGESV
          </h4>
        </div>
      </a>
      <div
        className="edit-color"
        id="25827779_rgba(252,230,0,0.5)-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="color-icon"
          style={
            Object {
              "backgroundColor": "rgba(252,230,0,0.5)",
            }
          }
        />
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
      >
        <svg
          className="icon"
          id="25827779_rgba(252,230,0,0.5)-delete"
          onClick={[Function]}
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
  </section>
  <div
    className="pagination"
  >
    <div
      className="item-list"
    >
      <div
        className="item active"
      >
        <span
          id="1-button"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          1
        </span>
      </div>
    </div>
    <div
      className="page-size-selector"
    >
      <div
        className="closed"
      >
        <div
          className="active"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            10 PER PAGE
          </span>
          <svg
            height="13px"
            width="7px"
          >
            <use
              xlinkHref="/static/svglist.svg#pagination-arrows"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            25 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            50 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            100 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            VIEW ALL
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
      </div>
      <div
        className="per-page-toggle"
        onClick={[MockFunction]}
        role="button"
        tabIndex={0}
      >
        10 PER PAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`<MyNotes /> container should match snapshot with page selector open 1`] = `
<div
  className="list-sections"
>
  <div
    className="searchbar"
  >
    <span
      className="input-wrapper"
    >
      <svg
        className="icon"
      >
        <use
          xlinkHref="/static/svglist.svg#search"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <input
        onChange={[Function]}
        placeholder="SEARCH NOTES"
        value=""
      />
    </span>
  </div>
  <section
    className="note-list"
  >
    <div
      className="highlight-item"
      id={403618}
    >
      <div
        className="list-item"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.06.19
            </span>
             
            | 
            New Note
          </h4>
          <p
            className="text"
          >
            Is here
          </p>
        </div>
      </div>
      <div
        className="edit-note"
        id="403618-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#edit_note"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
        id="403618-delete"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
    <div
      className="highlight-item"
      id={403619}
    >
      <div
        className="list-item"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="title-text"
        >
          <h4
            className="title"
          >
            <span
              className="date"
            >
              02.12.19
            </span>
             
            | 
            new note
          </h4>
          <p
            className="text"
          >
            newest note
          </p>
        </div>
      </div>
      <div
        className="edit-note"
        id="403619-edit"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#edit_note"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Edit
        </span>
      </div>
      <div
        className="delete-highlight"
        id="403619-delete"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <svg
          className="icon"
        >
          <use
            xlinkHref="/static/svglist.svg#delete"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span>
          Delete
        </span>
      </div>
    </div>
  </section>
  <div
    className="pagination"
  >
    <div
      className="item-list"
    >
      <div
        className="item active"
      >
        <span
          id="1-button"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          1
        </span>
      </div>
    </div>
    <div
      className="page-size-selector"
    >
      <div
        className="open"
      >
        <div
          className="active"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            10 PER PAGE
          </span>
          <svg
            height="13px"
            width="7px"
          >
            <use
              xlinkHref="/static/svglist.svg#pagination-arrows"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            />
          </svg>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            25 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            50 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            100 PER PAGE
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
        <div
          className="inactive"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="text"
          >
            VIEW ALL
          </span>
          <span
            className="svg-placeholder"
          >
             
          </span>
        </div>
      </div>
      <div
        className="closed per-page-toggle"
        onClick={[MockFunction]}
        role="button"
        tabIndex={0}
      >
        10 PER PAGE
      </div>
    </div>
  </div>
</div>
`;
